index-page: Fix shrinking header when subtitle wraps
Rework layout using single grid.

--- a/src/index.css
+++ b/src/index.css
@@ -24,10 +24,13 @@ header {
 
   display: grid;
   grid-template-columns: auto 1fr;
-  align-items: center;
-  gap: var(--app-spacing);
+  grid-template-rows: auto auto;
+  align-items: start;
+  column-gap: var(--app-spacing);
 
   .logo {
+    grid-column: 1;
+    grid-row: 1 / 3;
     height: calc(
       /* h1 + subtitle */
       (var(--wa-font-size-xl) * var(--wa-line-height-condensed)) +
@@ -37,20 +40,23 @@ header {
     object-fit: contain;
   }
 
-  .title {
-    display: flex;
-    flex-direction: column;
-  }
-
   h1 {
+    grid-column: 2;
+    grid-row: 1;
+
     font-size: var(--wa-font-size-xl);
     line-height: var(--wa-line-height-condensed);
-
-    /* Allow subtitle to slide behind h1 in scroll animation */
-    background-color: var(--wa-color-brand-fill-normal);
-    z-index: 2;
   }
   .subtitle {
+    grid-column: 2;
+    grid-row: 2;
+
+    /* crop, bottom-aligned, during shrinking header animation */
+    max-height: 100%;
+    overflow: hidden;
+    display: flex;
+    align-items: end;
+
     font-size: var(--wa-font-size-m);
     font-weight: var(--wa-font-weight-normal);
     color: var(--wa-color-text-quiet);
@@ -152,10 +158,12 @@ header {
   from {
     padding-block: var(--app-padding);
     box-shadow: none;
+    grid-template-rows: auto 1fr;
   }
   to {
     padding-block: var(--app-spacing);
     box-shadow: var(--wa-shadow-l);
+    grid-template-rows: auto 0fr;
   }
 }
 
@@ -184,12 +192,10 @@ header {
 @keyframes scroll-subtitle {
   from {
     opacity: 1;
-    transform: translateY(0);
-    margin-block-end: 0;
+    visibility: visible;
   }
   to {
     opacity: 0;
-    transform: translateY(-100%);
-    margin-block-end: calc(-1 * var(--wa-font-size-m) * var(--wa-line-height-normal));
+    visibility: hidden;
   }
 }
